
import "Job.proto";
import "City.proto";
import "Quest.proto";
import "Structure.proto";
import "Task.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventStaticDataProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//in the future, put in neutral city elems?																						//DONE
message RetrieveStaticDataRequestProto {
    optional MinimumUserProto sender = 1;
	repeated int32 structIds = 2;
	repeated int32 taskIds = 3;
	repeated int32 questIds = 4;
	repeated int32 cityIds = 5;
	repeated int32 monsterIds = 6;
	repeated int32 buildStructJobIds = 7;
	repeated int32 upgradeStructJobIds = 8;
}

message RetrieveStaticDataResponseProto {
    optional MinimumUserProto sender = 1;
	repeated FullStructureProto structs = 2;
	repeated FullTaskProto tasks = 3;
	repeated FullQuestProto quests = 4;
	repeated FullCityProto cities = 5;
	repeated BuildStructJobProto buildStructJobs = 6;
	repeated UpgradeStructJobProto upgradeStructJobs = 7;
	optional RetrieveStaticDataStatus status = 8;
	
	enum RetrieveStaticDataStatus {
		SUCCESS = 1;
		SOME_FAIL = 2;
	}
	
}

//------------------------------------------------------------------------------------------

message PurgeClientStaticDataResponseProto {
     optional int32 senderId = 1;
}

//------------------------------------------------------------------------------------------

	
